y.output
Terminals unused in grammar

   SUB
   ADD
   END
   UMINUS


State 15 conflicts: 2 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Function Program
    2        | %empty

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    4 Declarations: Declaration SEMICOLON
    5             | Declaration SEMICOLON Declarations
    6             | %empty

    7 Declaration: IDENTIFIER COMMA Declaration
    8            | IDENTIFIER COLON INTEGER
    9            | IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   10 Statements: Statement SEMICOLON Statements
   11           | Statement SEMICOLON

   12 Statement: Var ASSIGN Expression
   13          | IF BoolExpr THEN Statements ENDIF
   14          | IF BoolExpr THEN Statements ELSE Statements ENDIF
   15          | WHILE BoolExpr BEGINLOOP Statements ENDLOOP
   16          | DO BEGINLOOP Statements ENDLOOP WHILE BoolExpr
   17          | READ Vars
   18          | WRITE Vars
   19          | CONTINUE
   20          | RETURN Expression

   21 BoolExpr: RelationAndExpr
   22         | RelationAndExpr OR RelationAndExpr

   23 RelationAndExpr: RelationExpr
   24                | RelationExpr AND RelationExpr

   25 RelationExpr: NOT RelationExpr
   26             | Expression Comp Expression
   27             | TRUE
   28             | FALSE
   29             | L_PAREN BoolExpr R_PAREN

   30 Comp: EQ
   31     | NEQ
   32     | GT
   33     | GTE
   34     | LT
   35     | LTE

   36 Expressions: Expression COMMA Expressions
   37            | Expression

   38 Expression: MultExpr
   39           | MultExpr PLUS Expression
   40           | MultExpr MINUS Expression

   41 MultExpr: Term
   42         | Term MULT MultExpr
   43         | Term DIV MultExpr
   44         | Term MOD MultExpr

   45 Term: Var
   46     | MINUS Var
   47     | NUMBER
   48     | MINUS NUMBER
   49     | L_PAREN Expression R_PAREN
   50     | MINUS L_PAREN Expression R_PAREN
   51     | IDENTIFIER L_PAREN Expressions R_PAREN

   52 Vars: Var COMMA Vars
   53     | Var

   54 Var: IDENTIFIER
   55    | IDENTIFIER L_SQUARE_BRACKET Expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 3
BEGIN_PARAMS (259) 3
END_PARAMS (260) 3
BEGIN_LOCALS (261) 3
END_LOCALS (262) 3
BEGIN_BODY (263) 3
END_BODY (264) 3
INTEGER (265) 8 9
ARRAY (266) 9
OF (267) 9
IF (268) 13 14
THEN (269) 13 14
ENDIF (270) 13 14
ELSE (271) 14
WHILE (272) 15 16
DO (273) 16
BEGINLOOP (274) 15 16
ENDLOOP (275) 15 16
CONTINUE (276) 19
READ (277) 17
WRITE (278) 18
AND (279) 24
OR (280) 22
NOT (281) 25
TRUE (282) 27
FALSE (283) 28
RETURN (284) 20
SUB (285)
ADD (286)
MULT (287) 42
DIV (288) 43
MOD (289) 44
EQ (290) 30
NEQ (291) 31
LT (292) 34
GT (293) 32
LTE (294) 35
GTE (295) 33
SEMICOLON (296) 3 4 5 10 11
COLON (297) 8 9
COMMA (298) 7 36 52
L_PAREN (299) 29 49 50 51
R_PAREN (300) 29 49 50 51
L_SQUARE_BRACKET (301) 9 55
R_SQUARE_BRACKET (302) 9 55
ASSIGN (303) 12
END (304)
IDENTIFIER (305) 3 7 8 9 51 54 55
NUMBER (306) 9 47 48
PLUS (307) 39
MINUS (308) 40 46 48 50
UMINUS (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
Program (56)
    on left: 1 2, on right: 0 1
Function (57)
    on left: 3, on right: 1
Declarations (58)
    on left: 4 5 6, on right: 3 5
Declaration (59)
    on left: 7 8 9, on right: 4 5 7
Statements (60)
    on left: 10 11, on right: 3 10 13 14 15 16
Statement (61)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
BoolExpr (62)
    on left: 21 22, on right: 13 14 15 16 29
RelationAndExpr (63)
    on left: 23 24, on right: 21 22
RelationExpr (64)
    on left: 25 26 27 28 29, on right: 23 24 25
Comp (65)
    on left: 30 31 32 33 34 35, on right: 26
Expressions (66)
    on left: 36 37, on right: 36 51
Expression (67)
    on left: 38 39 40, on right: 12 20 26 36 37 39 40 49 50 55
MultExpr (68)
    on left: 41 42 43 44, on right: 38 39 40 42 43 44
Term (69)
    on left: 45 46 47 48 49 50 51, on right: 41 42 43 44
Vars (70)
    on left: 52 53, on right: 17 18 52
Var (71)
    on left: 54 55, on right: 12 45 46 52 53


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program   go to state 2
    Function  go to state 3


State 1

    3 Function: FUNCTION . IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: Function . Program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program   go to state 6
    Function  go to state 3


State 4

    3 Function: FUNCTION IDENTIFIER . SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    SEMICOLON  shift, and go to state 7


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: Function Program .

    $default  reduce using rule 1 (Program)


State 7

    3 Function: FUNCTION IDENTIFIER SEMICOLON . BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 8


State 8

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS . Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 6 (Declarations)

    Declarations  go to state 10
    Declaration   go to state 11


State 9

    7 Declaration: IDENTIFIER . COMMA Declaration
    8            | IDENTIFIER . COLON INTEGER
    9            | IDENTIFIER . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 12
    COMMA  shift, and go to state 13


State 10

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations . END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    END_PARAMS  shift, and go to state 14


State 11

    4 Declarations: Declaration . SEMICOLON
    5             | Declaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 15


State 12

    8 Declaration: IDENTIFIER COLON . INTEGER
    9            | IDENTIFIER COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 16
    ARRAY    shift, and go to state 17


State 13

    7 Declaration: IDENTIFIER COMMA . Declaration

    IDENTIFIER  shift, and go to state 9

    Declaration  go to state 18


State 14

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS . BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 19


State 15

    4 Declarations: Declaration SEMICOLON .
    5             | Declaration SEMICOLON . Declarations

    IDENTIFIER  shift, and go to state 9

    END_PARAMS  reduce using rule 4 (Declarations)
    END_PARAMS  [reduce using rule 6 (Declarations)]
    END_LOCALS  reduce using rule 4 (Declarations)
    END_LOCALS  [reduce using rule 6 (Declarations)]
    $default    reduce using rule 4 (Declarations)

    Declarations  go to state 20
    Declaration   go to state 11


State 16

    8 Declaration: IDENTIFIER COLON INTEGER .

    $default  reduce using rule 8 (Declaration)


State 17

    9 Declaration: IDENTIFIER COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 21


State 18

    7 Declaration: IDENTIFIER COMMA Declaration .

    $default  reduce using rule 7 (Declaration)


State 19

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS . Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 6 (Declarations)

    Declarations  go to state 22
    Declaration   go to state 11


State 20

    5 Declarations: Declaration SEMICOLON Declarations .

    $default  reduce using rule 5 (Declarations)


State 21

    9 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 23


State 22

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations . END_LOCALS BEGIN_BODY Statements END_BODY

    END_LOCALS  shift, and go to state 24


State 23

    9 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 25


State 24

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 26


State 25

    9 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 27


State 26

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IF          shift, and go to state 28
    WHILE       shift, and go to state 29
    DO          shift, and go to state 30
    CONTINUE    shift, and go to state 31
    READ        shift, and go to state 32
    WRITE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Statements  go to state 36
    Statement   go to state 37
    Var         go to state 38


State 27

    9 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 39


State 28

   13 Statement: IF . BoolExpr THEN Statements ENDIF
   14          | IF . BoolExpr THEN Statements ELSE Statements ENDIF

    NOT         shift, and go to state 40
    TRUE        shift, and go to state 41
    FALSE       shift, and go to state 42
    L_PAREN     shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    BoolExpr         go to state 47
    RelationAndExpr  go to state 48
    RelationExpr     go to state 49
    Expression       go to state 50
    MultExpr         go to state 51
    Term             go to state 52
    Var              go to state 53


State 29

   15 Statement: WHILE . BoolExpr BEGINLOOP Statements ENDLOOP

    NOT         shift, and go to state 40
    TRUE        shift, and go to state 41
    FALSE       shift, and go to state 42
    L_PAREN     shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    BoolExpr         go to state 54
    RelationAndExpr  go to state 48
    RelationExpr     go to state 49
    Expression       go to state 50
    MultExpr         go to state 51
    Term             go to state 52
    Var              go to state 53


State 30

   16 Statement: DO . BEGINLOOP Statements ENDLOOP WHILE BoolExpr

    BEGINLOOP  shift, and go to state 55


State 31

   19 Statement: CONTINUE .

    $default  reduce using rule 19 (Statement)


State 32

   17 Statement: READ . Vars

    IDENTIFIER  shift, and go to state 35

    Vars  go to state 56
    Var   go to state 57


State 33

   18 Statement: WRITE . Vars

    IDENTIFIER  shift, and go to state 35

    Vars  go to state 58
    Var   go to state 57


State 34

   20 Statement: RETURN . Expression

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 60
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 35

   54 Var: IDENTIFIER .
   55    | IDENTIFIER . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 61

    $default  reduce using rule 54 (Var)


State 36

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements . END_BODY

    END_BODY  shift, and go to state 62


State 37

   10 Statements: Statement . SEMICOLON Statements
   11           | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 38

   12 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 64


State 39

    9 Declaration: IDENTIFIER COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 9 (Declaration)


State 40

   25 RelationExpr: NOT . RelationExpr

    NOT         shift, and go to state 40
    TRUE        shift, and go to state 41
    FALSE       shift, and go to state 42
    L_PAREN     shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    RelationExpr  go to state 65
    Expression    go to state 50
    MultExpr      go to state 51
    Term          go to state 52
    Var           go to state 53


State 41

   27 RelationExpr: TRUE .

    $default  reduce using rule 27 (RelationExpr)


State 42

   28 RelationExpr: FALSE .

    $default  reduce using rule 28 (RelationExpr)


State 43

   29 RelationExpr: L_PAREN . BoolExpr R_PAREN
   49 Term: L_PAREN . Expression R_PAREN

    NOT         shift, and go to state 40
    TRUE        shift, and go to state 41
    FALSE       shift, and go to state 42
    L_PAREN     shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    BoolExpr         go to state 66
    RelationAndExpr  go to state 48
    RelationExpr     go to state 49
    Expression       go to state 67
    MultExpr         go to state 51
    Term             go to state 52
    Var              go to state 53


State 44

   51 Term: IDENTIFIER . L_PAREN Expressions R_PAREN
   54 Var: IDENTIFIER .
   55    | IDENTIFIER . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 68
    L_SQUARE_BRACKET  shift, and go to state 61

    $default  reduce using rule 54 (Var)


State 45

   47 Term: NUMBER .

    $default  reduce using rule 47 (Term)


State 46

   46 Term: MINUS . Var
   48     | MINUS . NUMBER
   50     | MINUS . L_PAREN Expression R_PAREN

    L_PAREN     shift, and go to state 69
    IDENTIFIER  shift, and go to state 35
    NUMBER      shift, and go to state 70

    Var  go to state 71


State 47

   13 Statement: IF BoolExpr . THEN Statements ENDIF
   14          | IF BoolExpr . THEN Statements ELSE Statements ENDIF

    THEN  shift, and go to state 72


State 48

   21 BoolExpr: RelationAndExpr .
   22         | RelationAndExpr . OR RelationAndExpr

    OR  shift, and go to state 73

    $default  reduce using rule 21 (BoolExpr)


State 49

   23 RelationAndExpr: RelationExpr .
   24                | RelationExpr . AND RelationExpr

    AND  shift, and go to state 74

    $default  reduce using rule 23 (RelationAndExpr)


State 50

   26 RelationExpr: Expression . Comp Expression

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76
    LT   shift, and go to state 77
    GT   shift, and go to state 78
    LTE  shift, and go to state 79
    GTE  shift, and go to state 80

    Comp  go to state 81


State 51

   38 Expression: MultExpr .
   39           | MultExpr . PLUS Expression
   40           | MultExpr . MINUS Expression

    PLUS   shift, and go to state 82
    MINUS  shift, and go to state 83

    $default  reduce using rule 38 (Expression)


State 52

   41 MultExpr: Term .
   42         | Term . MULT MultExpr
   43         | Term . DIV MultExpr
   44         | Term . MOD MultExpr

    MULT  shift, and go to state 84
    DIV   shift, and go to state 85
    MOD   shift, and go to state 86

    $default  reduce using rule 41 (MultExpr)


State 53

   45 Term: Var .

    $default  reduce using rule 45 (Term)


State 54

   15 Statement: WHILE BoolExpr . BEGINLOOP Statements ENDLOOP

    BEGINLOOP  shift, and go to state 87


State 55

   16 Statement: DO BEGINLOOP . Statements ENDLOOP WHILE BoolExpr

    IF          shift, and go to state 28
    WHILE       shift, and go to state 29
    DO          shift, and go to state 30
    CONTINUE    shift, and go to state 31
    READ        shift, and go to state 32
    WRITE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Statements  go to state 88
    Statement   go to state 37
    Var         go to state 38


State 56

   17 Statement: READ Vars .

    $default  reduce using rule 17 (Statement)


State 57

   52 Vars: Var . COMMA Vars
   53     | Var .

    COMMA  shift, and go to state 89

    $default  reduce using rule 53 (Vars)


State 58

   18 Statement: WRITE Vars .

    $default  reduce using rule 18 (Statement)


State 59

   49 Term: L_PAREN . Expression R_PAREN

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 90
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 60

   20 Statement: RETURN Expression .

    $default  reduce using rule 20 (Statement)


State 61

   55 Var: IDENTIFIER L_SQUARE_BRACKET . Expression R_SQUARE_BRACKET

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 91
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 62

    3 Function: FUNCTION IDENTIFIER SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY .

    $default  reduce using rule 3 (Function)


State 63

   10 Statements: Statement SEMICOLON . Statements
   11           | Statement SEMICOLON .

    IF          shift, and go to state 28
    WHILE       shift, and go to state 29
    DO          shift, and go to state 30
    CONTINUE    shift, and go to state 31
    READ        shift, and go to state 32
    WRITE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 11 (Statements)

    Statements  go to state 92
    Statement   go to state 37
    Var         go to state 38


State 64

   12 Statement: Var ASSIGN . Expression

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 93
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 65

   25 RelationExpr: NOT RelationExpr .

    $default  reduce using rule 25 (RelationExpr)


State 66

   29 RelationExpr: L_PAREN BoolExpr . R_PAREN

    R_PAREN  shift, and go to state 94


State 67

   26 RelationExpr: Expression . Comp Expression
   49 Term: L_PAREN Expression . R_PAREN

    EQ       shift, and go to state 75
    NEQ      shift, and go to state 76
    LT       shift, and go to state 77
    GT       shift, and go to state 78
    LTE      shift, and go to state 79
    GTE      shift, and go to state 80
    R_PAREN  shift, and go to state 95

    Comp  go to state 81


State 68

   51 Term: IDENTIFIER L_PAREN . Expressions R_PAREN

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expressions  go to state 96
    Expression   go to state 97
    MultExpr     go to state 51
    Term         go to state 52
    Var          go to state 53


State 69

   50 Term: MINUS L_PAREN . Expression R_PAREN

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 98
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 70

   48 Term: MINUS NUMBER .

    $default  reduce using rule 48 (Term)


State 71

   46 Term: MINUS Var .

    $default  reduce using rule 46 (Term)


State 72

   13 Statement: IF BoolExpr THEN . Statements ENDIF
   14          | IF BoolExpr THEN . Statements ELSE Statements ENDIF

    IF          shift, and go to state 28
    WHILE       shift, and go to state 29
    DO          shift, and go to state 30
    CONTINUE    shift, and go to state 31
    READ        shift, and go to state 32
    WRITE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Statements  go to state 99
    Statement   go to state 37
    Var         go to state 38


State 73

   22 BoolExpr: RelationAndExpr OR . RelationAndExpr

    NOT         shift, and go to state 40
    TRUE        shift, and go to state 41
    FALSE       shift, and go to state 42
    L_PAREN     shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    RelationAndExpr  go to state 100
    RelationExpr     go to state 49
    Expression       go to state 50
    MultExpr         go to state 51
    Term             go to state 52
    Var              go to state 53


State 74

   24 RelationAndExpr: RelationExpr AND . RelationExpr

    NOT         shift, and go to state 40
    TRUE        shift, and go to state 41
    FALSE       shift, and go to state 42
    L_PAREN     shift, and go to state 43
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    RelationExpr  go to state 101
    Expression    go to state 50
    MultExpr      go to state 51
    Term          go to state 52
    Var           go to state 53


State 75

   30 Comp: EQ .

    $default  reduce using rule 30 (Comp)


State 76

   31 Comp: NEQ .

    $default  reduce using rule 31 (Comp)


State 77

   34 Comp: LT .

    $default  reduce using rule 34 (Comp)


State 78

   32 Comp: GT .

    $default  reduce using rule 32 (Comp)


State 79

   35 Comp: LTE .

    $default  reduce using rule 35 (Comp)


State 80

   33 Comp: GTE .

    $default  reduce using rule 33 (Comp)


State 81

   26 RelationExpr: Expression Comp . Expression

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 102
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 82

   39 Expression: MultExpr PLUS . Expression

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 103
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 83

   40 Expression: MultExpr MINUS . Expression

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    Expression  go to state 104
    MultExpr    go to state 51
    Term        go to state 52
    Var         go to state 53


State 84

   42 MultExpr: Term MULT . MultExpr

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    MultExpr  go to state 105
    Term      go to state 52
    Var       go to state 53


State 85

   43 MultExpr: Term DIV . MultExpr

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    MultExpr  go to state 106
    Term      go to state 52
    Var       go to state 53


State 86

   44 MultExpr: Term MOD . MultExpr

    L_PAREN     shift, and go to state 59
    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MINUS       shift, and go to state 46

    MultExpr  go to state 107
    Term      go to state 52
    Var       go to state 53


State 87

   15 Statement: WHILE BoolExpr BEGINLOOP . Statements ENDLOOP

    IF          shift, and go to state 28
    WHILE       shift, and go to state 29
    DO          shift, and go to state 30
    CONTINUE    shift, and go to state 31
    READ        shift, and go to state 32
    WRITE       shift, and go to state 33
    RETURN      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    Statements  go to state 108
    Statement   go to state 37
    Var         go to state 38


State 88
